--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -12,11 +12,20 @@
 
 
     - name: Lists all compute managers
-      nsxt_fabric_compute_managers_facts:
-        hostname: "192.168.2.30"
-        username: "admin"
-        password: "Spacemonkeys20!"
-        validate_certs: False    
+      nsxt_fabric_compute_managers:
+        hostname: "{{NSXT-IP}}"
+        username: "{{nsx-username}}"
+        password: "{{nsx-password}}"
+        validate_certs: False
+        display_name: "lab vcenter"
+        server: "192.168.2.20"
+        description: "Lab vcenter"
+        origin_type: vCenter
+        credential:
+          credential_type: "UsernamePasswordLoginCredential"
+          username: "{{vcenter-user}}"
+          password: "{{vcenter-pass}}"
+        state: present         
       register: cpu_mgr
 
     - name: View all compute managers
