--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -53,7 +53,7 @@
       username: "{{nsx_username}}"
       password: "{{nsx_password}}"
       validate_certs: False
-      display_name: "lab vcenter"
+      display_name: "vCenter_{{item}}"
       server: "{{item}}"
       description: "vCenter_{{item}}"
       origin_type: vCenter
