--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -64,54 +64,96 @@
   #     state: present
   #   register: cpu_mgr
   #   with_items: "{{system_fabric.vcenters_list}}"
-  #   when: system_fabric.vcenters_list
+  #   when: system_fabric.vcenters_list is defined
 
   # - name: View all compute managers
   #   debug:
   #     msg: "{{cpu_mgr}}"
 
-  - name: Create transport zone
-    nsxt_transport_zones:
-      hostname: "{{nsxt_ip}}"
-      username: "{{nsx_username}}"
-      password: "{{nsx_password}}"
-      validate_certs: False
-      resource_type: "TransportZone"
-      display_name: "TZ_{{item}}"
-      host_switch_mode: "STANDARD"
-      description: "NSX configured {{item}} Transport Zone"
-      transport_type: "{%if 'Overlay' in item%}OVERLAY{%elif 'Vlan' in item%}VLAN{%endif%}"
-      is_default: "false"
-      nested_nsx: "false"
-      host_switch_name: "NSXT-NVDS"
-      state: "present"
-    with_items:
-      - Overlay
-      - Vlan
-      - Edge-Vlan1
-      - Edge-Vlan2
-      - Edge-Vlan3
-      - Edge-Vlan4
-
-  # - name: create IP Pool
-  #   nsxt_policy_ip_pool:
+  # - name: Create transport zone
+  #   nsxt_transport_zones:
   #     hostname: "{{nsxt_ip}}"
   #     username: "{{nsx_username}}"
   #     password: "{{nsx_password}}"
   #     validate_certs: False
-  #     id: NSX_TEP_POOL
-  #     display_name: NSX_TEP_POOL
+  #     resource_type: "TransportZone"
+  #     display_name: "TZ_{{item}}"
+  #     host_switch_mode: "STANDARD"
+  #     description: "NSX configured {{item}} Transport Zone"
+  #     transport_type: "{%if 'Overlay' in item%}OVERLAY{%elif 'Vlan' in item%}VLAN{%endif%}"
+  #     is_default: "false"
+  #     nested_nsx: "false"
+  #     host_switch_name: "NSXT-NVDS"
   #     state: "present"
-  #     pool_static_subnets:
-  #       - id: "TEP_subnet_{{item|ipaddr('host/prefix') | ipaddr('subnet')}}"
-  #         state: present
-  #         allocation_ranges:
-  #           - start: '192.116.0.10'
-  #             end: '192.116.0.20'
-  #           - start: '192.116.0.30'
-  #             end: '192.116.0.40'
-  #         cidr: "{{item|ipaddr('host/prefix') | ipaddr('subnet')}}"
-  #     with_items: "{{system_fabric.tep_pool_gws}}"  
-  #     when: system_fabric.tep_pool_gws|ipaddr
+  #   with_items:
+  #     - Overlay
+  #     - Vlan
+  #     - Edge-Vlan1
+  #     - Edge-Vlan2
+  #     - Edge-Vlan3
+  #     - Edge-Vlan4
+
+# This is a spot in case the Edges are nested inside compute transport node NVDS
+  # - name: Create transport zone
+  #   nsxt_transport_zones:
+  #     hostname: "{{nsxt_ip}}"
+  #     username: "{{nsx_username}}"
+  #     password: "{{nsx_password}}"
+  #     validate_certs: False
+  #     resource_type: "TransportZone"
+  #     display_name: "TZ_{{item}}"
+  #     host_switch_mode: "STANDARD"
+  #     description: "NSX configured {{item}} Transport Zone"
+  #     transport_type: "{%if 'Overlay' in item%}OVERLAY{%elif 'Vlan' in item%}VLAN{%endif%}"
+  #     is_default: "false"
+  #     nested_nsx: "false"
+  #     host_switch_name: "NSXT-NVDS"
+  #     state: "present"
+  #   with_items:
+  #     - Overlay
+  #     - Vlan
+  #     - Edge-Vlan1
+  #     - Edge-Vlan2
+  #     - Edge-Vlan3
+  #     - Edge-Vlan4
 
 
+  - name: create IP Pool
+    nsxt_policy_ip_pool:
+      hostname: "{{nsxt_ip}}"
+      username: "{{nsx_username}}"
+      password: "{{nsx_password}}"
+      validate_certs: False
+      id: NSX_TEP_POOL
+      display_name: NSX_TEP_POOL
+      state: "present"
+      pool_static_subnets:
+        - id: "TEP_subnet_{{item|ipaddr('net')}}"
+          state: present
+          allocation_ranges:
+            - start: "{{item|ipaddr('net') | ipaddr('1')}}"
+              end: "{{item|ipaddr('net') | ipaddr('-2')}}"
+          cidr: "{{item|ipaddr('net')}}"
+      with_items: "{{system_fabric.tep_pool_gws}}"  
+      when: system_fabric.tep_pool_gws is defined
+
+
+  # - name: Create Uplink Profiles
+  #   nsxt_uplink_profiles:
+  #     hostname: "{{nsxt_ip}}"
+  #     username: "{{nsx_username}}"
+  #     password: "{{nsx_password}}"
+  #     validate_certs: False
+  #     display_name: "uplinkProfile1",
+  #     mtu: 1600
+  #     resource_type: "UplinkHostSwitchProfile"
+  #     teaming:
+  #       policy: FAILOVER_ORDER     
+  #       active_list:
+  #         - uplink_name: "uplink-1"
+  #           uplink_type: PNIC
+  #       standby_list:
+  #         - uplink_name: "uplink-1"
+  #           uplink_type: PNIC      
+  #     transport_vlan: 0,
+  #     state: "present"
