--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -135,7 +135,7 @@
               end: "{{item|ipaddr('net') | ipaddr('-2')}}"
           cidr: "{{item|ipaddr('net')}}"
           gateway_ip: "{{item|ipaddr('address')}}"
-    with_items: "{{system_fabric.tep_pool_gws}}"
+    loop: "{{system_fabric.tep_pool_gws}}"
     when: system_fabric.tep_pool_gws is defined
         
   # - name: Create Uplink Profiles
