--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -156,6 +156,8 @@
               end: "192.168.50.254"
           cidr: "192.168.50.0/24"
           gateway_ip: "192.168.50.1"
+    vars: 
+      ansible_python_interpreter: /usr/bin/python3      
 
 
 
