--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -148,8 +148,9 @@
       id: NSX_TEP_POOL
       display_name: NSX_TEP_POOL
       state: "present"
+      create_or_update_subresource_first: true
       pool_static_subnets:
-        - id: "TEP_subnet_192.168.50.0/24"
+        - id: "TEP_subnet_192.168.50.0"
           state: present
           allocation_ranges:
             - start: "192.168.50.2"
