--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -118,27 +118,6 @@
   #     - Edge-Vlan4
 
 
-  # - name: create IP Pool
-  #   nsxt_policy_ip_pool:
-  #     hostname: "{{nsxt_ip}}"
-  #     username: "{{nsx_username}}"
-  #     password: "{{nsx_password}}"
-  #     validate_certs: False
-  #     id: NSX_TEP_POOL
-  #     display_name: NSX_TEP_POOL
-  #     state: "present"
-  #     pool_static_subnets:
-  #       - id: "TEP_subnet_{{item|ipaddr('net')}}"
-  #         state: present
-  #         allocation_ranges:
-  #           - start: "{{item|ipaddr('net') | ipaddr('2')}}"
-  #             end: "{{item|ipaddr('net') | ipaddr('-2')}}"
-  #         cidr: "{{item|ipaddr('net')}}"
-  #         gateway_ip: "{{item|ipaddr('address')}}"
-  #   loop: "{{system_fabric.tep_pool_gws}}"
-  #   when: system_fabric.tep_pool_gws is defined
-
-
   - name: create IP Pool
     nsxt_policy_ip_pool:
       hostname: "{{nsxt_ip}}"
@@ -148,17 +127,40 @@
       id: NSX_TEP_POOL
       display_name: NSX_TEP_POOL
       state: "present"
-      create_or_update_subresource_first: true
+      create_or_update_subresource_first: true      
       pool_static_subnets:
-        - id: "TEP_subnet_192.168.50.0"
+        - id: "TEP_subnet_{{item|ipaddr('net')}}"
           state: present
           allocation_ranges:
-            - start: "192.168.50.2"
-              end: "192.168.50.254"
-          cidr: "192.168.50.0/24"
-          gateway_ip: "192.168.50.1"
+            - start: "{{item|ipaddr('net') | ipaddr('2')}}"
+              end: "{{item|ipaddr('net') | ipaddr('-2')}}"
+          cidr: "{{item|ipaddr('net')}}"
+          gateway_ip: "{{item|ipaddr('address')}}"
+    loop: "{{system_fabric.tep_pool_gws}}"
+    when: system_fabric.tep_pool_gws is defined
     vars: 
       ansible_python_interpreter: /usr/bin/python3
+
+  # - name: create IP Pool
+  #   nsxt_policy_ip_pool:
+  #     hostname: "{{nsxt_ip}}"
+  #     username: "{{nsx_username}}"
+  #     password: "{{nsx_password}}"
+  #     validate_certs: False
+  #     id: NSX_TEP_POOL
+  #     display_name: NSX_TEP_POOL
+  #     state: "present"
+  #     create_or_update_subresource_first: true
+  #     pool_static_subnets:
+  #       - id: "TEP_subnet_192.168.50.0"
+  #         state: present
+  #         allocation_ranges:
+  #           - start: "192.168.50.2"
+  #             end: "192.168.50.254"
+  #         cidr: "192.168.50.0/24"
+  #         gateway_ip: "192.168.50.1"
+  #   vars: 
+  #     ansible_python_interpreter: /usr/bin/python3
 
 
 
