--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -129,11 +129,11 @@
   #     state: "present"
   #     create_or_update_subresource_first: true      
   #     pool_static_subnets:
-  #       - id: "TEP_subnet_{{item|ipaddr('net')}}"
+  #       - id: "TEP_subnet_{{item|ipaddr('network')}}"
   #         state: present
   #         allocation_ranges:
-  #           - start: "{{item|ipaddr('net') | ipaddr('2')}}"
-  #             end: "{{item|ipaddr('net') | ipaddr('-2')}}"
+  #           - start: "{{item|ipaddr('network') | ipaddr('2')}}"
+  #             end: "{{item|ipaddr('network') | ipaddr('-2')}}"
   #         cidr: "{{item|ipaddr('net')}}"
   #         gateway_ip: "{{item|ipaddr('address')}}"
   #   loop: "{{system_fabric.tep_pool_gws}}"
@@ -144,7 +144,7 @@
 
   - name: View all compute managers
     debug:
-      msg: "{{item|ipaddr('network')}}"
+      msg: "{{item|ipaddr('host/prefix')}}"
     loop: "{{system_fabric.tep_pool_gws}}"
     when: system_fabric.tep_pool_gws is defined
 
