--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -132,8 +132,8 @@
         - id: "TEP_subnet_{{item|ipaddr('network/prefix')}}"
           state: present
           allocation_ranges:
-            - start: "{{item|ipaddr('network') | ipmath('2')}}"
-              end: "{{item|ipaddr('network') | ipmath('-2')}}"
+            - start: "{{item|ipaddr() | ipaddr('2')}}"
+              end: "{{item|ipaddr() | ipaddr('-2')}}"
           cidr: "{{item|ipaddr('network/prefix')}}"
           gateway_ip: "{{item|ipaddr('address')}}"
     loop: "{{system_fabric.tep_pool_gws}}"
