--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -118,37 +118,6 @@
   #     - Edge-Vlan4
 
 
-  - name: create IP Pool
-    nsxt_policy_ip_pool:
-      hostname: "{{nsxt_ip}}"
-      username: "{{nsx_username}}"
-      password: "{{nsx_password}}"
-      validate_certs: False
-      id: NSX_TEP_POOL
-      display_name: NSX_TEP_POOL
-      state: "present"
-      create_or_update_subresource_first: true
-      do_wait_till_create: true
-      pool_static_subnets:
-        - id: "TEP_subnet_{{item|ipaddr('network')}}"
-          state: present
-          allocation_ranges:
-            - start: "{{item|ipaddr('2')|ipaddr('address')}}"
-              end: "{{item|ipaddr('-2')|ipaddr('address')}}"
-          cidr: "{{item|ipaddr('network/prefix')}}"
-          gateway_ip: "{{item|ipaddr('address')}}"
-    loop: "{{system_fabric.tep_pool_gws}}"
-    when: system_fabric.tep_pool_gws is defined
-    vars: 
-      ansible_python_interpreter: /usr/bin/python3
-
-
-  # - name: View all compute managers
-  #   debug:
-  #     msg: "start_{{item|ipaddr('-2')|ipaddr('address')}}"
-  #   loop: "{{system_fabric.tep_pool_gws}}"
-  #   when: system_fabric.tep_pool_gws is defined
-
   # - name: create IP Pool
   #   nsxt_policy_ip_pool:
   #     hostname: "{{nsxt_ip}}"
@@ -159,16 +128,47 @@
   #     display_name: NSX_TEP_POOL
   #     state: "present"
   #     create_or_update_subresource_first: true
+  #     do_wait_till_create: true
   #     pool_static_subnets:
-  #       - id: "TEP_subnet_192.168.50.0"
+  #       - id: "TEP_subnet_{{item|ipaddr('network')}}"
   #         state: present
   #         allocation_ranges:
-  #           - start: "192.168.50.2"
-  #             end: "192.168.50.254"
-  #         cidr: "192.168.50.0/24"
-  #         gateway_ip: "192.168.50.1"
+  #           - start: "{{item|ipaddr('2')|ipaddr('address')}}"
+  #             end: "{{item|ipaddr('-2')|ipaddr('address')}}"
+  #         cidr: "{{item|ipaddr('network/prefix')}}"
+  #         gateway_ip: "{{item|ipaddr('address')}}"
+  #   loop: "{{system_fabric.tep_pool_gws}}"
+  #   when: system_fabric.tep_pool_gws is defined
   #   vars: 
   #     ansible_python_interpreter: /usr/bin/python3
+
+
+  # - name: View all compute managers
+  #   debug:
+  #     msg: "start_{{item|ipaddr('-2')|ipaddr('address')}}"
+  #   loop: "{{system_fabric.tep_pool_gws}}"
+  #   when: system_fabric.tep_pool_gws is defined
+
+  - name: create IP Pool
+    nsxt_policy_ip_pool:
+      hostname: "{{nsxt_ip}}"
+      username: "{{nsx_username}}"
+      password: "{{nsx_password}}"
+      validate_certs: False
+      id: NSX_TEP_POOL
+      display_name: NSX_TEP_POOL
+      state: "present"
+      create_or_update_subresource_first: true
+      pool_static_subnets:
+        - id: "TEP_subnet_192.168.100.0/23"
+          state: present
+          allocation_ranges:
+            - start: "192.168.100.2"
+              end: "192.168.101.254"
+          cidr: "192.168.100.0/23"
+          gateway_ip: "192.168.50.1"
+    vars: 
+      ansible_python_interpreter: /usr/bin/python3
 
 
 
