--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -158,7 +158,7 @@
       id: NSX_TEP_POOL
       display_name: NSX_TEP_POOL
       state: "present"
-      create_or_update_subresource_first: true
+      # create_or_update_subresource_first: true
       pool_static_subnets:
         - id: "TEP_subnet_192.168.100.0/23"
           state: present
