--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -159,6 +159,7 @@
       display_name: NSX_TEP_POOL
       state: "present"
       # create_or_update_subresource_first: true
+      achieve_subresource_state_if_del_parent: true
       pool_static_subnets:
         - id: "TEP_subnet_192.168.100.0/23"
           state: present
