--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -162,12 +162,14 @@
       achieve_subresource_state_if_del_parent: 'true'
       pool_static_subnets:
         - id: "TEP_subnet_192.168.100.0/23"
+          display_name: "TEP_subnet_192.168.100.0/23"
           state: present
           allocation_ranges:
             - start: "192.168.100.2"
               end: "192.168.101.254"
           cidr: "192.168.100.0/23"
           gateway_ip: "192.168.100.1"
+          do_wait_till_create: true
     vars: 
       ansible_python_interpreter: /usr/bin/python3
 
