--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -166,29 +166,34 @@
     vars: 
       ansible_python_interpreter: /usr/bin/python3
 
-  - name: create IP Pool
-    nsxt_policy_ip_pool:
-      hostname: "{{nsxt_ip}}"
-      username: "{{nsx_username}}"
-      password: "{{nsx_password}}"
-      validate_certs: False
-      id: NSX_TEP_POOL
-      display_name: NSX_TEP_POOL
-      state: "present"
-      create_or_update_subresource_first: "true"
-      achieve_subresource_state_if_del_parent: "true"
-      pool_static_subnets:
-        - id: "TEP_subnet_192.168.100.0/23"
-          display_name: "TEP_subnet_192.168.100.0/23"
-          state: present
-          allocation_ranges:
-            - start: "192.168.100.2"
-              end: "192.168.101.254"
-          cidr: "192.168.100.0/23"
-          gateway_ip: "192.168.100.1"
-          do_wait_till_create: true
-    vars: 
-      ansible_python_interpreter: /usr/bin/python3
+  # - name: create IP Pool
+  #   nsxt_policy_ip_pool:
+  #     hostname: "{{nsxt_ip}}"
+  #     username: "{{nsx_username}}"
+  #     password: "{{nsx_password}}"
+  #     validate_certs: False
+  #     id: NSX_TEP_POOL
+  #     display_name: NSX_TEP_POOL
+  #     state: "present"
+  #     create_or_update_subresource_first: "true"
+  #     achieve_subresource_state_if_del_parent: "true"
+  #     pool_static_subnets:
+  #       - id: "TEP_subnet_192.168.100.0/23"
+  #         display_name: "TEP_subnet_192.168.100.0/23"
+  #         state: present
+  #         allocation_ranges:
+  #           - start: "192.168.100.2"
+  #             end: "192.168.101.254"
+  #         cidr: "192.168.100.0/23"
+  #         gateway_ip: "192.168.100.1"
+  #         do_wait_till_create: true
+  #   vars: 
+  #     ansible_python_interpreter: /usr/bin/python3
+
+
+
+
+
 
 
 
