--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -177,9 +177,9 @@
       state: "present"
       # create_or_update_subresource_first: "true"
       # achieve_subresource_state_if_del_parent: "true"
-      pool_static_subnets:
-        do_wait_till_create: true
-        - id: "TEP_subnet_192.168.100.0/23"
+      pool_static_subnets:      
+        - do_wait_till_create: true
+          id: "TEP_subnet_192.168.100.0/23"
           create_or_update_subresource_first: true
           display_name: "TEP_subnet_192.168.100.0/23"
           state: present
