--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -179,7 +179,8 @@
       achieve_subresource_state_if_del_parent: true
       do_wait_till_create: true
       pool_static_subnets:      
-        # - id: "TEP_subnet_192.168.100.0/23"
+        - 
+          # id: "TEP_subnet_192.168.100.0/23"
           # display_name: "TEP_subnet_192.168.100.0/23"
           state: present
           allocation_ranges:
