--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -175,20 +175,19 @@
       id: NSX_TEP_POOL
       display_name: NSX_TEP_POOL
       state: "present"
-      create_or_update_subresource_first: true
-      achieve_subresource_state_if_del_parent: true
-      do_wait_till_create: true
       pool_static_subnets:      
         - 
           # id: "TEP_subnet_192.168.100.0/23"
-          # display_name: "TEP_subnet_192.168.100.0/23"
+          display_name: "TEP_subnet_192.168.100.0/23"
           state: present
           allocation_ranges:
             - start: "192.168.100.2"
               end: "192.168.101.254"
           cidr: "192.168.100.0/23"
           gateway_ip: "192.168.100.1"
-
+      create_or_update_subresource_first: true
+      # achieve_subresource_state_if_del_parent: true
+      do_wait_till_create: true
     vars: 
       ansible_python_interpreter: /usr/bin/python3
 
