--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -177,14 +177,14 @@
       state: "present"
       pool_static_subnets:      
         - 
-          # id: "TEP_subnet_192.168.100.0/23"
-          display_name: "TEP_subnet_192.168.100.0/23"
+          id: "TEP_subnet_192.168.100.0/23"
+          # display_name: "TEP_subnet_192.168.100.0/23"
           state: present
           allocation_ranges:
             - start: "192.168.100.2"
               end: "192.168.101.254"
           cidr: "192.168.100.0/23"
-          gateway_ip: "192.168.100.1"
+          # gateway_ip: "192.168.100.1"
       create_or_update_subresource_first: true
       # achieve_subresource_state_if_del_parent: true
       do_wait_till_create: true
