--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -178,19 +178,18 @@
       resource_type: "UplinkHostSwitchProfile"
       teaming:
         policy: "{{item['policy']}}"
-        active_list:
-      {% for link in item['active-uplinks'] if item['active-uplinks'] %}
+        active_list: {% for link in item['active-uplinks'] if item['active-uplinks'] %}
           - uplink_name: "uplink-{{link}}"
             uplink_type: PNIC
-      {% endfor %}
+        {% endfor %}
         standby_list:
-      {% for link in item['standby-uplinks'] if item['standby-uplinks'] %}
-          - uplink_name: "uplink-{{link}}"
-            uplink_type: PNIC
-      {% endfor %}       
+      # {% for link in item['standby-uplinks'] if item['standby-uplinks'] %}
+      #     - uplink_name: "uplink-{{link}}"
+      #       uplink_type: PNIC
+      # {% endfor %}       
       transport_vlan: "{{overlay_vlan|default(0)}}"
       state: "present"
     loop:
       - {"name": "actv-actv-4nics", "policy": "LOADBALANCE_SRCID", "active-uplinks": [1,2,3,4]}
       - {"name": "actv-actv-2nics", "policy": "LOADBALANCE_SRCID", "active-uplinks": [1,2]}
-      - {"name": "actv-stdby-2nics", "policy": "FAILOVER_ORDER", "active-uplinks": [1,2]}
+      # - {"name": "actv-stdby-2nics", "policy": "FAILOVER_ORDER", "active-uplinks": [1,2]}
