--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -5,8 +5,8 @@
   gather_facts: no
   vars:
     uplinkprofs:
-      - {"name": "actv-actv-4nics", "policy": "LOADBALANCE_SRCID", "active-uplinks": [1,2,3,4]}
-      - {"name": "actv-actv-2nics", "policy": "LOADBALANCE_SRCID", "active-uplinks": [1,2]}
+      - {"name": "actv-actv-4nics", "policy": "LOADBALANCE_SRCID", "active-uplinks": [1,2,3,4] }
+      - {"name": "actv-actv-2nics", "policy": "LOADBALANCE_SRCID", "active-uplinks": [1,2] }
       # - {"name": "actv-stdby-2nics", "policy": "FAILOVER_ORDER", "active-uplinks": [1,2]}
 
   tasks:
@@ -193,9 +193,7 @@
       # {% endfor %}       
       transport_vlan: "{{overlay_vlan|default(0)}}"
       state: "present"
-    with_subelements:
-      - "{{uplinkprofs}}"
-      - active-uplinks
+    loop: "{{uplinkprofs| subelements('active-uplinks', 'skip_missing=True')}}"
 
     # loop:
     #   - {"name": "actv-actv-4nics", "policy": "LOADBALANCE_SRCID", "active-uplinks": [1,2,3,4]}
